--- a/_msvcStuff/BattleCityEos.vcxproj.filters
+++ b/_msvcStuff/BattleCityEos.vcxproj.filters
@@ -222,11 +222,17 @@
     <ClCompile Include="..\src\net\tx\base.cpp">
       <Filter>Source Files\net\tx</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\net\tx\exchanger.cpp">
+    <ClCompile Include="..\src\net\tx\DataExchanger.cpp">
       <Filter>Source Files\net\tx</Filter>
     </ClCompile>
     <ClCompile Include="..\src\net\tmpBoostProcessV2.cpp">
       <Filter>Source Files\net\boost</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\net\tx\eventer.cpp">
+      <Filter>Source Files\net\tx</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\net\tx\EventExchanger.cpp">
+      <Filter>Source Files\net\tx</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -362,7 +368,7 @@
     <ClInclude Include="..\src\net\tx\commander.h">
       <Filter>Header Files\net\tx</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\net\tx\exchanger.h">
+    <ClInclude Include="..\src\net\tx\DataExchanger.h">
       <Filter>Header Files\net\tx</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\_L\boost_1_80\boost\process\v2\process.hpp">
@@ -388,6 +394,12 @@
     </ClInclude>
     <ClInclude Include="..\..\..\_L\boost_1_81\boost\process\v2\detail\process_handle_windows.hpp">
       <Filter>Header Files\net\boost</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\net\tx\updater.h">
+      <Filter>Header Files\net\tx</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\net\tx\EventExchanger.h">
+      <Filter>Header Files\net\tx</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
